--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
-    "Topic :: Scientific/Engineering :: Signal Processing",
+    "Topic :: Scientific/Engineering",
     "Intended Audience :: Science/Research"
 ]
 dependencies = [
